Bug 87820 - Images not displayed properly in Calc
Summary: Images not displayed properly in Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.2 target:4.3.7
Keywords: regression
: 86096 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-29 06:33 UTC by Eugene Kin
Modified: 2015-03-19 07:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
After opening (30.45 KB, image/jpeg)
2014-12-29 06:33 UTC, Eugene Kin
Details
After one scroll up/down (30.50 KB, image/jpeg)
2014-12-29 06:34 UTC, Eugene Kin
Details
Calc 4.4.0.2 (50.94 KB, image/jpeg)
2015-01-09 09:35 UTC, Eugene Kin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Kin 2014-12-29 06:33:23 UTC
Created attachment 111452 [details]
After opening

Images are not displayed properly in Calc 4.3 and 4.4

1) Create new Calc document.
2) Insert image into it (Insert->Image...).
3) Save and close document
4) Open document.
5) Image is not displayed at all or displayed partially
6) After refreshing document (scrolling up/down, changing sheet, minimize/maximize Calc window) image is displayed as expected.

Issue seems to be Calc specific. Images are displayed correctly in Writer and Impress.

Calc 4.2.x displays images right away.


OS - Windows 7 SP1 x64
Comment 1 Eugene Kin 2014-12-29 06:34:12 UTC
Created attachment 111453 [details]
After one scroll up/down
Comment 2 A (Andy) 2014-12-29 19:47:33 UTC
Reproducible with LO 4.3.4.1, but not reproducible with LO 4.4.0.0.beta1 (Win 8.1).
Comment 3 Eugene Kin 2015-01-09 09:34:40 UTC
Issue still here
Calc 4.4.0.2
Comment 4 Eugene Kin 2015-01-09 09:35:50 UTC
Created attachment 111997 [details]
Calc 4.4.0.2
Comment 5 Michael Meeks 2015-02-24 15:43:49 UTC
Patch from Henry here: https://gerrit.libreoffice.org/#/c/14505/ Tamas - any ideas on that one ? -)
Comment 6 Commit Notification 2015-03-01 16:04:41 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c84442f99de109b585d3ba8964deb8dcf261c0f

tdf#87820  Images not displayed properly in Calc

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-03-02 20:20:21 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d50a8286b84a5b7b783c91c81248dc71e94340d&h=libreoffice-4-4

tdf#87820  Images not displayed properly in Calc

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-03-02 20:24:46 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e035a0775bd0a0cc14d64d7a0c0f265e9dcd4622&h=libreoffice-4-3

tdf#87820  Images not displayed properly in Calc

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Petr Hudeček 2015-03-15 11:17:23 UTC
The image now displays properly in the current build of 4.5.0 on Windows 8.1. It did not display properly in earlier builds on my system.
Comment 10 Matthew Francis 2015-03-19 07:58:00 UTC
*** Bug 86096 has been marked as a duplicate of this bug. ***