tdf#87820  Images not displayed properly in Calc

Fixed. After opening, images were not displayed properly in Calc 4.3 and 4.4

Change-Id: I1f0dd7e9d332889df81be84a6c1e28a09f509733
Reviewed-on: https://gerrit.libreoffice.org/14505
Reviewed-by: Zolnai Tamás <zolnaitamas2000@gmail.com>
Tested-by: Zolnai Tamás <zolnaitamas2000@gmail.com>